Fix padding on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -185,6 +185,10 @@ h1 {
       right: 0;
     }
 
+    .container {
+      padding: 1.5em;
+    }
+
     .clouds {
       overflow-y: scroll
       height: auto;
